# python-training

./: .env.example  .gitignore  README.md  index.py  pyproject.toml
src/models/: base.py  student.py
src/services/: student.py
src/types/: type.py
src/utils/: common.py  db.py  db_util.py
src/views/: __init__.py  student.py
